change model to class from string literal

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <fwt-tb>Loading FWT Team Builder ...</fwt-tb>
   </body>
 </html>
