:recycle: separates header into dashboard component

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,10 @@
   </head>
 
   <body>
-    <fwt-tb>Loading FWT Team Builder ...</fwt-tb>
+    <my-app class="bg-warning">
+      <i class="em em-see_no_evil"></i>
+      ... Loading FWT Team Builder ...
+      <i class="em em-hear_no_evil"></i>
+    </my-app>
   </body>
 </html>
